[gd_scene load_steps=9 format=3 uid="uid://380qb1b5xy8d"]

[ext_resource type="Texture2D" uid="uid://37a1fen7nto7" path="res://item/item1.png" id="1_nd1w3"]
[ext_resource type="Script" path="res://item/item_object.gd" id="1_rjb2y"]
[ext_resource type="Script" path="res://game.gd" id="1_uibol"]
[ext_resource type="Texture2D" uid="uid://xu2tc7afagxq" path="res://item/item2.png" id="2_bdv5y"]
[ext_resource type="PackedScene" uid="uid://ckdu5d10nsfnt" path="res://customer/customer.tscn" id="2_ysrud"]
[ext_resource type="Script" path="res://item/tray.gd" id="3_4oqvu"]
[ext_resource type="Texture2D" uid="uid://crw3l23alkj3t" path="res://item/item3.png" id="3_ll2m5"]
[ext_resource type="Texture2D" uid="uid://c0hbv6s4sjit5" path="res://item/托盤.png" id="4_ftmg6"]

[node name="Root" type="Node"]
script = ExtResource("1_uibol")
customer_scene = ExtResource("2_ysrud")

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.603248, 0.603248, 0.603248, 1)

[node name="表演區" type="ColorRect" parent="."]
clip_children = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -448.0
offset_right = 836.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="托盤" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = 172.0
offset_right = 590.0
offset_bottom = 472.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_4oqvu")

[node name="TextureRect" type="TextureRect" parent="托盤"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.5
offset_top = -64.0
offset_right = 255.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ftmg6")

[node name="item1" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -699.0
offset_top = 139.0
offset_right = -599.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rjb2y")

[node name="TextureRect" type="TextureRect" parent="item1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -38.0
offset_right = 31.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nd1w3")

[node name="item2" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -491.0
offset_top = 137.0
offset_right = -391.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rjb2y")

[node name="TextureRect" type="TextureRect" parent="item2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -38.0
offset_right = 31.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bdv5y")

[node name="item3" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = 139.0
offset_right = -160.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rjb2y")

[node name="TextureRect" type="TextureRect" parent="item3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -38.0
offset_right = 31.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ll2m5")

[node name="CustomerTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="CustomerTimer" to="." method="_on_customer_timer_timeout"]
